--- a/form-shortcode/languages/cfef-ru_RU.po
+++ b/form-shortcode/languages/cfef-ru_RU.po
@@ -28,7 +28,7 @@ msgstr "Имя"
 #: form-shortcode.php:78
 #@ cfef
 msgid "Your First Name"
-msgstr "Ваше имя*"
+msgstr "Ваше имя"
 
 #: form-shortcode.php:83
 #@ cfef
@@ -38,13 +38,13 @@ msgstr "Фамилия"
 #: form-shortcode.php:84
 #@ cfef
 msgid "Your Last Name"
-msgstr "Ваша фамилия*"
+msgstr "Ваша фамилия"
 
 #: form-shortcode.php:89
 #: form-shortcode.php:135
 #@ cfef
 msgid "Email"
-msgstr "Эл. почта*"
+msgstr "Эл. почта"
 
 #: form-shortcode.php:95
 #: form-shortcode.php:141
@@ -56,7 +56,7 @@ msgstr "Пароль"
 #: form-shortcode.php:102
 #@ cfef
 msgid "between 8 and 32 characters long"
-msgstr "Введите пароль (длина от 8 до 32 символов)*"
+msgstr "Введите пароль (длина от 8 до 32 символов)"
 
 #: form-shortcode.php:101
 #@ cfef
@@ -71,7 +71,7 @@ msgstr "Страна"
 #: form-shortcode.php:108
 #@ cfef
 msgid "Your Country"
-msgstr "Ваша страна*"
+msgstr "Ваша страна"
 
 #: form-shortcode.php:113
 #@ cfef
@@ -101,7 +101,7 @@ msgstr "Забыли пароль?"
 #: form-shortcode.php:114
 #@ cfef
 msgid "Your City"
-msgstr "Ваш город*"
+msgstr "Ваш город"
 
 #: form-shortcode.php:5
 #@ cfef
