fixe locaton problemm

--- a/languages/cfef-ru_RU.po
+++ b/languages/cfef-ru_RU.po
@@ -108,3 +108,9 @@ msgstr "Ваш город"
 msgid "The user is logged in."
 msgstr "Уже зашли"
 
+
+#: mailchimpIntegration-init.php
+#@ cfef
+msgid "Your password"
+msgstr "Ваш пароль"
+
