--- a/languages/cfef-ru_RU.po
+++ b/languages/cfef-ru_RU.po
@@ -20,6 +20,11 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Textdomain-Support: yes"
 
+#: form-shortcode.php:84
+#@ cfef
+msgid "Update profile title"
+msgstr "Уточните Ваши данные:"
+
 #: form-shortcode.php:77
 #@ cfef
 msgid "First Name"
@@ -37,8 +42,8 @@ msgstr "Фамилия"
 
 #: form-shortcode.php:84
 #@ cfef
-msgid "Your Last Name"
-msgstr "Ваша фамилия"
+msgid "Display Name"
+msgstr "Отображаемое имя"
 
 #: form-shortcode.php:89
 #: form-shortcode.php:135
@@ -63,20 +68,16 @@ msgstr "Введите пароль (длина от 8 до 32 символов)
 msgid "Password confirmation"
 msgstr "Подтверждение пароля"
 
-#: form-shortcode.php:107
-#@ cfef
-msgid "Country"
-msgstr "Страна"
-
 #: form-shortcode.php:108
 #@ cfef
-msgid "Your Country"
+msgid "country"
 msgstr "Ваша страна"
 
-#: form-shortcode.php:113
+#: form-shortcode.php:114
 #@ cfef
-msgid "City"
-msgstr "Город"
+msgid "city"
+msgstr "Ваш город"
+
 
 #: form-shortcode.php:118
 #@ cfef
@@ -97,11 +98,6 @@ msgstr "Войти"
 #@ cfef
 msgid "Reset Password"
 msgstr "Забыли пароль?"
-
-#: form-shortcode.php:114
-#@ cfef
-msgid "Your City"
-msgstr "Ваш город"
 
 #: form-shortcode.php:5
 #@ cfef
