--- a/languages/cfef-ru_RU.po
+++ b/languages/cfef-ru_RU.po
@@ -113,7 +113,7 @@ msgstr "Ваш пароль"
 #: form-shortcode.php
 #@ cfef
 msgid "Custom activation subject"
-msgstr Активируйте полный доступ к онлайн-курсу "Основы науки каббала"
+msgstr  Активация вашей учетной записи
 
 #: form-shortcode.php:5
 #@ cfef
